feat : 파비콘 및 로고...

--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
+    <title>버티</title>
+  
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="apple-mobile-web-app-title" content="버티" />
+  
+    <!-- Open Graph
+    <meta property="og:title" content="버티" />
+    <meta property="og:description" content="대한민국 청년들의 정착 고민을 해결해주는 플랫폼" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="" />
+    <meta property="og:type" content="website" /> -->
+  </head>  
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
